--- a/wiki/STEMdatafilereferencev6.wiki
+++ b/wiki/STEMdatafilereferencev6.wiki
@@ -562,6 +562,6 @@ The *help* element contains feedback that can be given during the interaction. T
 <li> *width:* Sets the width of the help.</li>
 <li> height: Sets the height of all the help.</li>
 <li> background: Sets the background colour of the help element; this is an RBG colour in written in HEX.</li>
-<li> *alpha:* Sets the transparency of the element. Because the help element is often put on top of the other elements, this can useful.
+<li> *alpha:* Sets the transparency of the element. Because the help element is often put on top of the other elements, this can useful.</li>
 <li> *colour:* Sets the colour of the text; this is an RBG colour in written in HEX.</li>
 </ul>
