Edited wiki page STEMdatafilereferencev6 through web user interface.

--- a/wiki/STEMdatafilereferencev6.wiki
+++ b/wiki/STEMdatafilereferencev6.wiki
@@ -570,4 +570,4 @@ The *help* element contains feedback that can be given during the interaction. T
 
 [#stem]
 <br>
-[STEMdatafilereferencev6#stem]
+[#stem link]
