Edited wiki page STEMdatafilereferencev6 through web user interface.

--- a/wiki/STEMdatafilereferencev6.wiki
+++ b/wiki/STEMdatafilereferencev6.wiki
@@ -13,6 +13,7 @@ and must appear exactly as shown here: <br>
 
 =STEM=
 `<stem>`
+<br>
 Syntax
 {{{
 <stem>
@@ -568,4 +569,4 @@ The *help* element contains feedback that can be given during the interaction. T
 </ul>
 
 
-[#stem <stem>]
+[#STEM <stem>]
