--- a/wiki/STEMdatafilereferencev6.wiki
+++ b/wiki/STEMdatafilereferencev6.wiki
@@ -565,3 +565,12 @@ The *help* element contains feedback that can be given during the interaction. T
 <li> *alpha:* Sets the transparency of the element. Because the help element is often put on top of the other elements, this can useful.</li>
 <li> *colour:* Sets the colour of the text; this is an RBG colour in written in HEX.</li>
 </ul>
+
+Stem Reference:
+  * [#<stem> <stem>]
+    * [#<space> <space>]
+      * [#<background> <background>]
+    * [#<message> <message>]
+      * [#<padding> <padding>]
+      * [#<finalscore> <finalscore>]
+      * [#<finalfactors> <finalfactors>]
