--- a/wiki/STEMdatafilereferencev6.wiki
+++ b/wiki/STEMdatafilereferencev6.wiki
@@ -566,11 +566,27 @@ The *help* element contains feedback that can be given during the interaction. T
 <li> *colour:* Sets the colour of the text; this is an RBG colour in written in HEX.</li>
 </ul>
 
-Stem Reference:
-  * [#<stem> <stem>]
-    * [#<space> <space>]
-      * [#<background> <background>]
-    * [#<message> <message>]
-      * [#<padding> <padding>]
-      * [#<finalscore> <finalscore>]
-      * [#<finalfactors> <finalfactors>]
+=Stem Reference:=
+  * [#<stem> stem]
+    * [#<space> space]
+      * [#<background> background]
+    * [#<message> message]
+      * [#<padding> padding]
+      * [#<finalscore> finalscore]
+      * [#<finalfactors> finalfactors]
+    * [#<factors> factors]
+      * [#<factor> factor]
+    * [#<reports> reports]
+      * [#<report> report]
+    * [#<interaction> interaction]
+      * [#<name> name]
+      * [#<visual> visual]
+      * [#<statements> statements]
+        * [#<statement> statement]
+          * [#<reaction> reaction]
+          * [#<responses> responses ]
+            * [#<choices> choices]
+              * [#<scores> scores]
+                * [#<factor> factor]
+    * [#<helper> helper]
+      * [#<help> help]
