--- a/wiki/TrunkXMLDOCs.wiki
+++ b/wiki/TrunkXMLDOCs.wiki
@@ -401,10 +401,11 @@ The x and y position is taken from the statement element.<br>
 }}}
 *Attributes - all are optional and depend on the type that has been set in the name.*
 <ul>
-<li> *image:* This is the relative path to an image file. The file type can be any image
-format that Flash supports. Not every statement needs an image; if an image is not
-defined for a statement then the last image used will remain.</li>
-</ul>
+  * *image:* This is the relative path to an image file. The file type can be any image format that Flash supports. Not every statement needs an image; if an image is not defined for a statement then the last image used will remain.
+  * *x:* The x position of the chat bubble
+  * *y:* The y position of the chat bubble
+  * *anchor:* The point where the chat bubble will anchored.
+
 ==Example==
 {{{
 <reaction image="media/jill.jpg" >Hi </reaction>
