--- a/wiki/STEMdatafilereferencev6.wiki
+++ b/wiki/STEMdatafilereferencev6.wiki
@@ -4,6 +4,7 @@
 appear in the stem.xml document. The class tree for the elements is shown below.</p>
 
 [[File:element.png|thumb|alt=Stem Diagram|Stem Diagram]]
+[File:element.png|thumb|alt=Stem Diagram|Stem Diagram]
 <img src="http://i1139.photobucket.com/albums/n545/blackzky8/element.png" width="549" height="324">
 <br>
 
