--- a/wiki/STEMdatafilereferencev6.wiki
+++ b/wiki/STEMdatafilereferencev6.wiki
@@ -3,7 +3,6 @@
 <p>This section contains a reference for all STEM elements, in the order that they
 appear in the stem.xml document. The class tree for the elements is shown below.</p>
 
-[[File:element.png]]
 <img src="http://i1139.photobucket.com/albums/n545/blackzky8/element.png" width="549" height="324">
 <br>
 
@@ -590,3 +589,7 @@ The *help* element contains feedback that can be given during the interaction. T
 <li> *alpha:* Sets the transparency of the element. Because the help element is often put on top of the other elements, this can useful.</li>
 <li> *colour:* Sets the colour of the text; this is an RBG colour in written in HEX.</li>
 </ul>
+
+[[File:element.png]]
+<br>
+[[File:/element.png]]
