--- a/wiki/STEMdatafilereferencev6.wiki
+++ b/wiki/STEMdatafilereferencev6.wiki
@@ -3,7 +3,7 @@
 <p>This section contains a reference for all STEM elements, in the order that they
 appear in the stem.xml document. The class tree for the elements is shown below.</p>
 
-<img src="http://i1139.photobucket.com/albums/n545/blackzky8/element.png" width="549" height="324">
+<img src="http://stemplayer.googlecode.com/svn/wiki/element.png" width="549" height="324">
 <br>
 
 =Stem Reference:=
