--- a/wiki/TrunkXMLDOCs.wiki
+++ b/wiki/TrunkXMLDOCs.wiki
@@ -1,9 +1,9 @@
 #labels Reference,trunk
-<h2>Stem Reference - Version 0.7</h2>
+<h2>Stem Reference - TRUNK</h2>
 <p>This section contains a reference for all STEM elements, in the order that they
 appear in the stem.xml document. The class tree for the elements is shown below.</p>
 
-<img src="http://i1139.photobucket.com/albums/n545/blackzky8/element.png" width="549" height="324">
+<img src="http://stemplayer.googlecode.com/svn/wiki/element.png" width="549" height="324">
 <br>
 
 =Stem Reference:=
